<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Chronometer
        android:id="@+id/activity_game_easy_chronometer"
        android:layout_width="103dp"
        android:layout_height="40dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="200dp"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/activity_end_game_accueil_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="52dp"
        android:text="@string/menu_difficulte"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/activity_game_easy_timer_imageView"
        android:layout_width="41dp"
        android:layout_height="45dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="196dp"
        android:contentDescription="@string/Timer"
        android:src="@drawable/timer_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_end_game_scores_txt"
        android:layout_width="79dp"
        android:layout_height="42dp"
        android:layout_marginStart="172dp"
        android:layout_marginBottom="264dp"
        android:text="@string/_00_00"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/activity_end_game_accueil_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/activity_end_game_titre_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="64dp"
        android:text="@string/fin_de_partie"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/activity_end_game_niveauSuivant_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="52dp"
        android:text="@string/niveau_suivant"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/activity_end_game_étoile_imageView"
        android:layout_width="43dp"
        android:layout_height="67dp"
        android:layout_marginStart="124dp"
        android:layout_marginBottom="252dp"
        android:contentDescription="@string/star"
        android:src="@drawable/star_image"
        app:layout_constraintBottom_toTopOf="@+id/activity_end_game_accueil_btn"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>