<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF">

    <ImageView
        android:id="@+id/activity_game_prototype_card1_imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="180dp"
        android:contentDescription="@string/card1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hiddencards" />

    <ImageView
        android:id="@+id/activity_game_prototype_card4_imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="192dp"
        android:layout_marginTop="308dp"
        android:contentDescription="@string/card1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hiddencards" />

    <ImageView
        android:id="@+id/activity_game_prototype_card3_imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="256dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/card3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/hiddencards"
        tools:ignore="DuplicateIds" />

    <ImageView
        android:id="@+id/activity_game_prototype_card2_imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="68dp"
        android:contentDescription="@string/card2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hiddencards" />

    <TextView
        android:id="@+id/activity_game_prototype_timer_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="68dp"
        android:text="@string/timer_00_00"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>