<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF">

    <Chronometer
        android:id="@+id/activity_game_easy_chronometer"
        android:layout_width="103dp"
        android:layout_height="40dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="72dp"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/activity_game_easy_card2_imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="128dp"
        android:contentDescription="@string/card2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hiddencards" />

    <ImageView
        android:id="@+id/activity_game_easy_card5_imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="252dp"
        android:contentDescription="@string/card4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/hiddencards" />

    <ImageView
        android:id="@+id/activity_game_easy_card3_imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/card3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_game_easy_chronometer"
        app:srcCompat="@drawable/hiddencards" />

    <ImageView
        android:id="@+id/activity_game_easy_card4_imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="240dp"
        android:layout_marginBottom="252dp"
        android:contentDescription="@string/card4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/hiddencards" />

    <ImageView
        android:id="@+id/activity_game_easy_card8_imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="252dp"
        android:contentDescription="@string/card4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/hiddencards" />

    <ImageView
        android:id="@+id/activity_game_easy_card1_imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="180dp"
        android:contentDescription="@string/card1"
        android:scaleType="fitStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hiddencards" />

    <ImageView
        android:id="@+id/activity_game_easy_timer_imageView"
        android:layout_width="48dp"
        android:layout_height="40dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/Timer"
        android:src="@drawable/timer_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>