<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    tools:context=".Activity.DifficultyLevelActivity">

    <TextView
        android:id="@+id/activity_difficulty_level_titre_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="64dp"
        android:text="@string/niveaux_de_difficult"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/activity_difficulty_level_moyen_btn"
        android:layout_width="107dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="126dp"
        android:text="@string/moyen"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Button
        android:id="@+id/activity_difficulty_level_difficile_btn"
        android:layout_width="132dp"
        android:layout_height="61dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="114dp"
        android:text="@string/difficile"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <Button
        android:id="@+id/activity_difficulty_level_facile_btn"
        android:layout_width="101dp"
        android:layout_height="58dp"
        android:layout_marginStart="128dp"
        android:layout_marginBottom="396dp"
        android:text="@string/facile"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="252dp"
        android:layout_height="49dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_difficulty_level_titre_textView"
        app:srcCompat="@drawable/star_1" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="286dp"
        android:layout_height="53dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="37dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_difficulty_level_facile_btn"
        app:srcCompat="@drawable/stars_2" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="289dp"
        android:layout_height="52dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_difficulty_level_moyen_btn"
        app:srcCompat="@drawable/stars_3" />

</androidx.constraintlayout.widget.ConstraintLayout>