<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    tools:context=".Activity.GameGridActivity">

    <ImageView
        android:id="@+id/activity_game_grid_card2_iV"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="128dp"
        android:contentDescription="@string/card2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hiddencards" />

    <ImageView
        android:id="@+id/activity_game_grid_card5_iV"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="264dp"
        android:contentDescription="@string/card4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/hiddencards" />

    <ImageView
        android:id="@+id/activity_game_grid_card11_iV"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/card4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/hiddencards" />

    <ImageView
        android:id="@+id/activity_game_grid_card4_iV"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="244dp"
        android:layout_marginBottom="264dp"
        android:contentDescription="@string/card4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/hiddencards" />

    <ImageView
        android:id="@+id/activity_game_grid_card8_iV"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="144dp"
        android:contentDescription="@string/card4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/hiddencards" />

    <ImageView
        android:id="@+id/activity_game_grid_card6_iV"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="264dp"
        android:contentDescription="@string/card4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/hiddencards" />

    <ImageView
        android:id="@+id/activity_game_grid_card10_iV"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="244dp"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/card4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/hiddencards" />

    <ImageView
        android:id="@+id/activity_game_grid_card12_iV"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/card4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/hiddencards" />

    <ImageView
        android:id="@+id/activity_game_grid_card7_iV"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="244dp"
        android:layout_marginBottom="144dp"
        android:contentDescription="@string/card4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/hiddencards" />

    <ImageView
        android:id="@+id/activity_game_grid_card9_iV"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="144dp"
        android:contentDescription="@string/card4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/hiddencards" />

    <ImageView
        android:id="@+id/activity_game_grid_card3_iV"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/card3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_game_grid_chronometer"
        app:srcCompat="@drawable/hiddencards" />

    <Chronometer
        android:id="@+id/activity_game_grid_chronometer"
        android:layout_width="113dp"
        android:layout_height="52dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="72dp"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/activity_game_grid_clock_iV"
        android:layout_width="64dp"
        android:layout_height="50dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/Timer"
        android:src="@drawable/timer_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/activity_game_grid_card1_iV"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="58dp"
        android:contentDescription="@string/card1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_game_grid_clock_iV"
        app:srcCompat="@drawable/hiddencards" />

</androidx.constraintlayout.widget.ConstraintLayout>